--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/MagicCardGame.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
+#.idea/inspectionProfiles/profiles_settings.xml
+#.idea/inspectionProfiles/Project_Default.xml
+#.idea/MagicCardGame.iml
+#.idea/misc.xml
+#.idea/modules.xml
+#.idea/vcs.xml
+.idea/*
 card_library/AllPrintings.json
